# abusive_language_detection

./: .gitignore  README.md  bert_lib.py  grid_search.py  main.py  pyproject.toml  translate.py
configs/general/hate/mbert/cased/: config_no_cleaned.json
configs/general/hate/mbert/uncased/: config_no_cleaned.json
configs/general/hate/norbert/: config_no_cleaned.json
configs/general/hate/notram/base/: config_no_cleaned.json
configs/general/hate/notram/large/: config_no_cleaned.json
configs/general/off/mbert/cased/: config_no_cleaned.json
configs/general/off/mbert/uncased/: config_no_cleaned.json
configs/general/off/norbert/: config_no_cleaned.json
configs/general/off/notram/base/: config_no_cleaned.json
configs/general/off/notram/large/: config_no_cleaned.json
configs/merged/hate/: config_1.2B.json  config_418M.json  config_dk_raw.json  config_opus-mt.json  config_train_dk.json  config_translatepy.json
configs/merged/off/: config_1.2B.json  config_418M.json  config_dk_raw.json  config_opus-mt.json  config_train_dk.json  config_translatepy.json
notebooks/: EDA Norwegian.ipynb  experiment_calculations.ipynb  preprocessing_danish.ipynb  preprocessing_norwegian.ipynb  requirements.txt  translation.ipynb
notebooks/annotation_analysis/: annotate_notebook.ipynb  annotated_combined.csv  annotated_offensive_combined.csv  annotation_calculations.ipynb
