[tool.poetry]
name = "master_kode"
version = "0.1.0"
description = ""
authors = ["Vilde Arntzen <vildera@stud.ntnu.no>"]

[tool.poetry.dependencies]

python = "3.8.2"
pandas-ods-reader = "^0.0.7"
pandas = "1.1.5"
numpy = "1.19.5"
tensorflow = "2.4.1"
transformers = "^4.3.2"
sklearn = "^0.0"
torch = "1.8.1"
jupyter = "^1.0.0"
seaborn = "^0.11.1"
nltk = "^3.5"
spellchecker = "^0.4"
emoji = "^1.2.0"
pygoogletranslation = "^2.0.5"
EasyNMT = "^1.0.2"
google-trans-new = "^1.1.9"
py-translate = "^1.0.3"
google-cloud = "^0.34.0"
google-cloud-translate = "^3.0.2"
google-analytics-admin = "^0.2.0"
pyGoogleTranslate = "^3.6.5"
chromedriver = "^2.24.1"
translatepy = "^1.2"
ray = {extras = ["tune"], version = "0.8.7"}
datasets = "^1.3.0"
Keras = "^2.4.3"
spacy = "^3.0.5"
wandb = "^0.10.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
